force-app/main/default/objects/nFORCE__Data_Archive__c/nFORCE__Data_Archive__c.object-meta.xml
<CustomObject>
    <description>This object stores field values and metadata associated to sObjects in a Snapshot.</description>
    <label>Data Archive</label>
    <nameField>
        <label>Data Archive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>