force-app/main/default/objects/nFORCE__Data_Archive__c/fields/nFORCE__Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Field_Api_Name__c</fullName>
    <description>The system automatically populates this field with the Field API Name captured in the Snapshot.</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>