force-app/main/default/objects/nFORCE__Data_Archive__c/fields/nFORCE__Field_Details__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Field_Details__c</fullName>
    <description>The system automatically populates this field with the field details captured in the Snapshot.</description>
    <label>Field Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>