force-app/main/default/objects/nFORCE__Data_Archive__c/fields/nFORCE__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Field_Type__c</fullName>
    <description>The system automatically populates this field with the field type of the field captured in the Snapshot.</description>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>