force-app/main/default/objects/nFORCE__Data_Archive__c/fields/nFORCE__Numeric_Index__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Numeric_Index__c</fullName>
    <description>This field is used as a numeric index.</description>
    <label>Numeric Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>